remove background black over

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
         </NAV>
     </DIV><!-- End Navbar --><!-- Banner/Slider -->
     <DIV id=header class="banner banner-full d-flex align-items-center banner-lungwort">
-        <DIV class="background-shape bs-right"></DIV>
         <DIV class=container>
             <DIV class=banner-content>
                 <DIV class="row align-items-center">
@@ -247,7 +246,6 @@
                     </DIV><!-- .col  --></DIV><!-- .row  --></DIV><!-- .conatiner  --></DIV><!-- Start Section -->
         <!-- Start Section -->
         <DIV id=why class="section section-pad section-bg-alt">
-            <DIV class="background-shape bs-reverse"></DIV>
             <DIV class=container>
                 <DIV class=row>
                     <DIV class=col-lg-6>
@@ -682,7 +680,7 @@
             </DIV>
         </DIV><!-- End Section --><!-- Start Section -->
         <DIV id=team class="section section-pad section-bg-alt section-fix team">
-            <DIV class="background-shape bs-right"></DIV>
+<!--            <DIV class="background-shape bs-right"></DIV>-->
             <DIV class=container>
                 <DIV class=row>
                     <DIV class=col-lg-6>
@@ -1159,8 +1157,7 @@
                                 <LI class=animated data-delay=".6" data-animate="fadeInUp"><A href="#"><EM
                                         class="fab fa-medium-m social_em"></EM></A></LI>
                             </UL>
-                            <A class=footer-logo href="index.html"><IMG src="images/logo-full-white.png"
-                                                                        srcset="images/logo-full-white2x.png 2x"></A><SPAN
+                            <A class=footer-logo href="index.html"><IMG src="images/logo-full-white.png"></A><SPAN
                                 class=copyright-text>Copyright © 2021, WinDEX. <SPAN>All trademarks and copyrights belong to their respective owners.</SPAN></SPAN>
                         </DIV>
                     </DIV>
